# knowledge-base

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  README.zh-CN.md  SKILL.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
assets/: kb_readme_template.md
local-knowledge-base/: SKILL.md  requirements.txt
local-knowledge-base/references/: FORMATS.md  INGESTION_WORKFLOW.md
local-knowledge-base/scripts/: complexity_analyzer.py  ensure_deps.py  kb_config.py  kb_init.py  smart_convert.py
references/: EXCEL_ROUTING.md  FAQ_OPERATIONS.md  INGESTION_WORKFLOW.md  QA_WORKFLOW.md  TOC_TEMPLATE.md
scripts/: ensure_deps.py  kb_config.py  kb_init.py  smart_convert.py
tests/: test_cli.py
